# apps/api/src/kori/routes.py
@@ -7,6 +7,7 @@ from kori.categories.router import router as categories_router
 from kori.health.router import router as health_router
 from kori.payment_methods.router import router as payment_methods_router
 from kori.tags.router import router as tags_router
+from kori.transactions.router import router as transactions_router
 
 API_PREFIX = "/api/v1"
 
@@ -16,6 +17,7 @@ ROUTERS: list[APIRouter] = [
     categories_router,
     payment_methods_router,
     tags_router,
+    transactions_router,
 ]
 
 
